# llm-agent-in-action

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  server.py
baml_src/: clients.baml  types.baml
baml_src/functions/: analysis.baml  rag.baml  reasoning.baml
docs/: ARCHITECTURE.md  BAML_IMPLEMENTATION_GUIDE.md  BAML_INTEGRATION_PROPOSAL.md  BAML_QUICK_REFERENCE.md  BAML_SUMMARY.md  GEMINI_MIGRATION_README.md  GEMINI_SDK_COMPARISON.md  GEMINI_SDK_MIGRATION.md  LLM_SWITCH_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_BAML.md  TEST_GUIDE.md  UV_GUIDE.md  UV_MIGRATION.md  description.md
knowledge_base/: fujifilm_x-s20_overview.md
scripts/: demo_llm_switch.py  example_client.py  setup_baml.sh  start.bat  start.sh  switch_llm.py  view_vector_db.py
src/: __init__.py
src/api/: __init__.py  main.py
src/cli/: cli.py
src/core/: agent.py  agent_baml.py  config.py  llm_adapter.py
src/services/: document_loader.py  vector_store.py
tests/: test_api.py
